fix: 졸업 시뮬레이션 DB에 트랙 정보 추가